--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -7,3 +7,18 @@
   padding: 10px;
   margin-bottom: 10px;
 }
+
+.error {
+  color: red;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.mainul {
+  color: blue;
+  font-size: larger;
+}
