--- a/part7/extend-bloglist-frontend/src/index.css
+++ b/part7/extend-bloglist-frontend/src/index.css
@@ -1,4 +1,4 @@
-.success {
+/* .success {
   color: rgb(0, 128, 0);
   background: lightgrey;
   font-size: 20px;
@@ -19,4 +19,4 @@
 }
 .Background {
   background: #111
-}
+} */
